[package]
name = "base-batcher-service"
description = "Batcher service: config, CLI arguments, and service startup"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
url.workspace = true
eyre.workspace = true
futures.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
base-tx-manager.workspace = true
base-batcher-core.workspace = true
base-batcher-admin.workspace = true
base-common-network.workspace = true
alloy-signer-local.workspace = true
base-batcher-source.workspace = true
base-batcher-encoder.workspace = true
tracing = { workspace = true, features = ["std"] }
derive_more = { workspace = true, features = ["debug"] }
base-protocol = { workspace = true, features = ["std"] }
base-runtime = { workspace = true, features = ["tokio"] }
alloy-primitives = { workspace = true, features = ["std"] }
alloy-rpc-types-eth = { workspace = true, features = ["std"] }
base-common-consensus = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
base-consensus-rpc = { workspace = true, features = ["client"] }
base-common-genesis = { workspace = true, features = ["std"] }
alloy-provider = { workspace = true, features = ["pubsub", "ws"] }
jsonrpsee = { workspace = true, features = ["http-client", "macros"] }
metrics = { workspace = true, optional = true }

[features]
metrics = [
	"base-batcher-core/metrics",
	"base-batcher-encoder/metrics",
	"base-consensus-rpc/metrics",
	"base-tx-manager/metrics",
	"dep:metrics",
]

[dev-dependencies]
httpmock.workspace = true
alloy-rlp.workspace = true
alloy-eips.workspace = true
miniz_oxide.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
