[package]
name = "base-builder-metering"
description = "Resource metering backend for the Base block builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
moka = { workspace = true, features = ["sync"] }
tracing.workspace = true
jsonrpsee.workspace = true
base-bundles.workspace = true
alloy-primitives.workspace = true
base-builder-core.workspace = true
base-node-runner.workspace = true

[dev-dependencies]
