[package]
name = "base-bundle-extension"
description = "Bundle Extension for Base node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# workspace
tokio = { workspace = true }
tracing = { workspace = true }
base-txpool = { workspace = true }
tokio-stream = { workspace = true }
reth-provider = { workspace = true }
reth-chain-state = { workspace = true }
base-node-runner = { workspace = true }

[lints]
workspace = true
