[package]
name = "base-tx-forwarding"
description = "Transaction forwarding extension for Base node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# workspace
reth-transaction-pool.workspace = true
base-node-runner.workspace = true

# misc
url.workspace = true
tracing = { workspace = true, features = ["std"] }

[dev-dependencies]
# workspace
base-node-runner = { workspace = true, features = ["test-utils"] }
