[package]
name = "base-tx-forwarding"
description = "Transaction forwarding extension for Base node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# workspace
base-node-runner.workspace = true
audit-archiver-lib.workspace = true
base-execution-txpool.workspace = true

# misc
url.workspace = true
tokio.workspace = true
tokio-util.workspace = true
jsonrpsee.workspace = true
alloy-primitives.workspace = true
tracing = { workspace = true, features = ["std"] }

[dev-dependencies]
# workspace
base-node-runner = { workspace = true, features = ["test-utils"] }
