[package]
name = "base-alloy-chains"
description = "Chain configuration and network upgrade bindings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# alloy
alloy-hardforks.workspace = true
alloy-primitives.workspace = true

# misc
auto_impl.workspace = true
serde = { workspace = true, optional = true }
revm = { workspace = true, default-features = false, optional = true }

[dev-dependencies]
alloy-chains.workspace = true

[features]
revm = [ "dep:revm" ]
serde = [ "alloy-hardforks/serde", "alloy-primitives/serde", "dep:serde" ]
