[package]
name = "base-common-chains"
description = "Chain configuration and network upgrade bindings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# alloy
alloy-hardforks.workspace = true
alloy-primitives.workspace = true

# reth
reth-ethereum-forks = { workspace = true, optional = true }

# misc
spin = { workspace = true, optional = true }
auto_impl.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
alloy-chains.workspace = true

[features]
default = [ "chain-hardforks" ]
chain-hardforks = [ "dep:reth-ethereum-forks", "dep:spin" ]
std = [ "alloy-primitives/std", "reth-ethereum-forks?/std", "spin?/std" ]
serde = [
	"alloy-hardforks/serde",
	"alloy-primitives/serde",
	"dep:serde",
	"reth-ethereum-forks?/serde",
]
