[package]
name = "base-common-network"
description = "Base blockchain RPC behavior abstraction"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
base-common-rpc-types.workspace = true
base-common-consensus = { workspace = true, features = ["alloy-compat", "std"] }

# Alloy
alloy-network.workspace = true
alloy-provider.workspace = true
alloy-primitives.workspace = true
alloy-consensus = { workspace = true, features = ["std"] }
alloy-rpc-types-eth = { workspace = true, features = ["std"] }

[dev-dependencies]
rstest.workspace = true

[features]
std = [
	"alloy-consensus/std",
	"alloy-primitives/std",
	"alloy-rpc-types-eth/std",
	"base-common-consensus/std",
	"base-common-rpc-types/std",
]
serde = [
	"alloy-consensus/serde",
	"alloy-primitives/serde",
	"alloy-rpc-types-eth/serde",
	"base-common-consensus/serde",
	"base-common-rpc-types/serde",
]
reth = [ "std" ]
