[package]
name = "base-common-provider"
description = "Interface with a Base blockchain"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
base-common-rpc-types-engine = { workspace = true, features = ["serde"] }

# Alloy
alloy-network.workspace = true
alloy-json-rpc.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-primitives = { workspace = true, features = ["rlp", "serde"] }
alloy-rpc-types-engine = { workspace = true, features = ["serde", "std"] }

# async
tower.workspace = true
tokio = { workspace = true, features = ["sync"] }

# misc
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[features]
std = [
	"alloy-primitives/std",
	"alloy-rpc-types-engine/std",
	"base-common-rpc-types-engine/std",
]
serde = [
	"alloy-primitives/serde",
	"alloy-rpc-types-engine/serde",
	"base-common-rpc-types-engine/serde",
]
