[package]
name = "base-common-signer"
description = "Remote transaction signer for EthereumWallet integration via eth_signTransaction"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Alloy
alloy-signer.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-eips = { workspace = true, features = ["std"] }
alloy-consensus = { workspace = true, features = ["std"] }
alloy-rpc-types-eth = { workspace = true, features = ["std"] }

# External
url.workspace = true
async-trait.workspace = true
tracing = { workspace = true, features = ["std"] }
thiserror = { workspace = true, features = ["std"] }
jsonrpsee = { workspace = true, features = ["http-client", "macros"] }

[dev-dependencies]
alloy-node-bindings.workspace = true
alloy-signer-local.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
