[package]
name = "base-consensus-engine"
description = "An implementation of the Base engine client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# workspace
base-metrics.workspace = true
base-consensus-genesis.workspace = true
base-protocol = { workspace = true, features = ["serde", "std"] }

# alloy
alloy-eips = { workspace = true, features = ["std"] }
alloy-network.workspace = true
alloy-transport.workspace = true
alloy-primitives.workspace = true
alloy-rpc-client.workspace = true
alloy-consensus = { workspace = true, features = ["std"] }
alloy-rpc-types-eth = { workspace = true, features = ["std"] }
alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde", "std"] }
alloy-transport-http = { workspace = true, features = ["reqwest", "hyper", "jwt-auth"] }
alloy-provider = { workspace = true, features = ["ipc", "reqwest", "reqwest-rustls-tls", "engine-api"] }

# base-alloy
base-common-network.workspace = true
base-common-provider.workspace = true
base-common-rpc-types.workspace = true
base-common-consensus = { workspace = true, features = ["std"] }
base-common-rpc-types-engine = { workspace = true, features = ["serde", "std"] }

# general
url.workspace = true
tokio.workspace = true
tower.workspace = true
async-trait.workspace = true
http-body-util.workspace = true
serde = { workspace = true, features = ["std"] }
tracing = { workspace = true, features = ["std"] }
thiserror = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
derive_more = { workspace = true, features = ["display", "deref", "from_str", "constructor"] }

# optional
metrics = { workspace = true, optional = true }
mockall = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
mockall.workspace = true
arbitrary.workspace = true
base-consensus-registry.workspace = true
metrics-exporter-prometheus.workspace = true
rand = { workspace = true, features = ["thread_rng"] }
base-common-rpc-types = { workspace = true, features = ["arbitrary", "k256"] }

[features]
metrics = [ "base-metrics/metrics", "dep:metrics" ]
test-utils = [ "base-protocol/test-utils", "dep:mockall" ]
