[package]
name = "base-consensus-leadership"
description = "Embedded sequencer leadership and failover consensus for Base"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# general
arc-swap.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
thiserror = { workspace = true, features = ["std"] }
tracing = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["std", "derive"] }
bincode = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }

# embedded leadership consensus
sled.workspace = true
openraft = { workspace = true, features = ["serde", "storage-v2"] }

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "test-util", "net", "io-util"] }

[features]
default = []
# Exposes the deterministic `MockDriver` for tests in downstream crates.
test-utils = []
