[package]
name = "base-consensus-node"
description = "An implementation of the OP Stack consensus node service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# workspace
base-health.workspace = true
base-consensus-gossip.workspace = true
base-consensus-disc.workspace = true
base-consensus-engine.workspace = true
base-consensus-sources.workspace = true
base-consensus-genesis.workspace = true
base-consensus-derive.workspace = true
base-protocol.workspace = true
base-consensus-providers.workspace = true
base-consensus-rpc = { workspace = true, features = ["client"] }
base-consensus-peers.workspace = true
base-macros.workspace = true

# alloy
alloy-chains = { workspace = true, features = ["std"] }
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-primitives.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types-eth = { workspace = true, features = ["std"] }
alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde", "std"] }
alloy-provider = { workspace = true, features = ["reqwest", "reqwest-rustls-tls", "hyper", "hyper-tls"] }
alloy-eips = { workspace = true, features = ["std"] }
alloy-transport.workspace = true
alloy-transport-http = { workspace = true, features = ["reqwest", "reqwest-rustls-tls", "hyper", "hyper-tls", "jwt-auth"] }

# base-alloy
base-alloy-network.workspace = true
base-alloy-rpc-types-engine = { workspace = true, features = ["std"] }
base-alloy-provider.workspace = true

# general
url.workspace = true
http.workspace = true
tower.workspace = true
bytes.workspace = true
discv5.workspace = true
futures.workspace = true
backon.workspace = true
libp2p.workspace = true
http-body.workspace = true
libp2p-stream.workspace = true
tracing = { workspace = true, features = ["std"] }
thiserror = { workspace = true, features = ["std"] }
tokio-util.workspace = true
async-trait.workspace = true
async-stream.workspace = true
tokio-stream.workspace = true
strum = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = ["debug", "eq"] }
jsonrpsee = { workspace = true, features = ["server", "http-client"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
http-body-util.workspace = true

# metrics
metrics = { workspace = true, optional = true }

[dev-dependencies]
http.workspace = true
rand.workspace = true
rstest.workspace = true
arbitrary.workspace = true
anyhow.workspace = true
backon.workspace = true
mockall.workspace = true
alloy-primitives = { workspace = true, features = ["k256"] }
alloy-rpc-types-engine = { workspace = true, features = ["arbitrary", "std"] }
alloy-consensus = { workspace = true, features = ["arbitrary", "std"] }
base-alloy-consensus = { workspace = true, features = ["arbitrary", "k256"] }
base-consensus-derive = {workspace = true, features = ["test-utils"]}

[features]
default = []
metrics = [
	"base-consensus-derive/metrics",
	"base-consensus-disc/metrics",
	"base-consensus-engine/metrics",
	"base-consensus-gossip/metrics",
	"base-consensus-providers/metrics",
	"base-consensus-rpc/metrics",
	"dep:metrics",
	"libp2p/metrics",
]
