[package]
name = "base-consensus-node"
description = "An implementation of the Base consensus node service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# workspace
base-health.workspace = true
base-metrics.workspace = true
base-protocol.workspace = true
base-consensus-disc.workspace = true
base-consensus-peers.workspace = true
base-consensus-gossip.workspace = true
base-consensus-engine.workspace = true
base-consensus-derive.workspace = true
base-consensus-safedb.workspace = true
base-consensus-sources.workspace = true
base-consensus-genesis.workspace = true
base-alloy-flashblocks.workspace = true
base-consensus-providers.workspace = true
base-consensus-rpc = { workspace = true, features = ["client"] }

# alloy
alloy-signer.workspace = true
alloy-genesis.workspace = true
alloy-transport.workspace = true
alloy-consensus.workspace = true
alloy-rpc-client.workspace = true
alloy-primitives.workspace = true
alloy-signer-local.workspace = true
alloy-eips = { workspace = true, features = ["std"] }
alloy-chains = { workspace = true, features = ["std"] }
alloy-rpc-types-eth = { workspace = true, features = ["std"] }
alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde", "std"] }
alloy-provider = { workspace = true, features = ["reqwest", "reqwest-rustls-tls", "hyper", "hyper-tls"] }
alloy-transport-http = { workspace = true, features = ["reqwest", "reqwest-rustls-tls", "hyper", "hyper-tls", "jwt-auth"] }

# base-alloy
base-alloy-chains.workspace = true
base-alloy-network.workspace = true
base-alloy-provider.workspace = true
base-alloy-consensus.workspace = true
base-alloy-rpc-types-engine = { workspace = true, features = ["std"] }

# general
url.workspace = true
http.workspace = true
serde.workspace = true
tower.workspace = true
bytes.workspace = true
discv5.workspace = true
backon.workspace = true
libp2p.workspace = true
futures.workspace = true
http-body.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
async-stream.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
libp2p-stream.workspace = true
http-body-util.workspace = true
tracing = { workspace = true, features = ["std"] }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true, features = ["std"] }
derive_more = { workspace = true, features = ["debug", "eq"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
jsonrpsee = { workspace = true, features = ["server", "http-client"] }

# metrics
metrics = { workspace = true, optional = true }

[dev-dependencies]
rand.workspace = true
rstest.workspace = true
anyhow.workspace = true
mockall.workspace = true
arbitrary.workspace = true
base-common-rpc-types.workspace = true
alloy-primitives = { workspace = true, features = ["k256"] }
base-consensus-derive = {workspace = true, features = ["test-utils"]}
base-consensus-engine = { workspace = true, features = ["test-utils"] }
alloy-consensus = { workspace = true, features = ["arbitrary", "std"] }
base-alloy-consensus = { workspace = true, features = ["arbitrary", "k256"] }
alloy-rpc-types-engine = { workspace = true, features = ["arbitrary", "std"] }

[features]
default = []
metrics = [
	"base-consensus-derive/metrics",
	"base-consensus-disc/metrics",
	"base-consensus-engine/metrics",
	"base-consensus-gossip/metrics",
	"base-consensus-providers/metrics",
	"base-consensus-rpc/metrics",
	"base-metrics/metrics",
	"dep:metrics",
	"libp2p/metrics",
]
