[package]
name = "base-address-resolution"
description = "Virtual address resolution types and traits for deposit forwarding"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives = { workspace = true, default-features = false }

[features]
default = ["std"]
std = ["alloy-primitives/std"]
