[package]
name = "reth-db-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Database abstraction used in reth."

[lints]
workspace = true

[dependencies]
# reth
reth-codecs.workspace = true
reth-db-models = { workspace = true, features = ["serde", "reth-codec"] }
reth-ethereum-primitives = { workspace = true, features = ["serde", "reth-codec"] }
reth-primitives-traits = { workspace = true, features = ["serde", "reth-codec"] }
reth-stages-types = { workspace = true, features = ["serde", "reth-codec"] }
reth-prune-types = { workspace = true, features = ["serde", "reth-codec"] }
reth-storage-errors.workspace = true
reth-trie-common.workspace = true

# ethereum
alloy-primitives.workspace = true
alloy-genesis.workspace = true
alloy-consensus.workspace = true

# codecs
modular-bitfield.workspace = true
roaring.workspace = true
parity-scale-codec = { workspace = true, features = ["bytes"] }
serde = { workspace = true, default-features = false }

# metrics
metrics.workspace = true

# misc
arrayvec.workspace = true
derive_more.workspace = true
bytes.workspace = true

# arbitrary utils
arbitrary = { workspace = true, features = ["derive"], optional = true }
proptest = { workspace = true, optional = true }

[dev-dependencies]
# reth libs with arbitrary
reth-codecs = { workspace = true, features = ["test-utils"] }
reth-db-models = { workspace = true, features = ["arbitrary"] }

alloy-primitives = { workspace = true, features = ["rand"] }
rand.workspace = true

test-fuzz.workspace = true

arbitrary = { workspace = true, features = ["derive"] }
proptest.workspace = true
proptest-arbitrary-interop.workspace = true

[features]
test-utils = [
	"arbitrary",
	"reth-codecs/test-utils",
	"reth-db-models/test-utils",
	"reth-ethereum-primitives/test-utils",
	"reth-primitives-traits/test-utils",
	"reth-prune-types/test-utils",
	"reth-stages-types/test-utils",
	"reth-trie-common/test-utils",
]
arbitrary = [
	"alloy-consensus/arbitrary",
	"alloy-primitives/arbitrary",
	"dep:arbitrary",
	"dep:proptest",
	"parity-scale-codec/arbitrary",
	"reth-codecs/arbitrary",
	"reth-db-models/arbitrary",
	"reth-ethereum-primitives/arbitrary",
	"reth-primitives-traits/arbitrary",
	"reth-prune-types/arbitrary",
	"reth-stages-types/arbitrary",
	"reth-trie-common/arbitrary",
]
bench = []
rocksdb = []
edge = [ "rocksdb" ]
