[package]
name = "reth-ethereum-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Ethereum primitive types"

[lints]
workspace = true

[dependencies]
# reth
reth-codecs = { workspace = true, optional = true }
reth-primitives-traits.workspace = true
reth-zstd-compressors = { workspace = true, optional = true }

# ethereum
alloy-eips = { workspace = true, features = ["k256"] }
alloy-primitives.workspace = true
alloy-consensus = { workspace = true, features = ["serde"] }
alloy-serde = { workspace = true, optional = true }
alloy-rpc-types-eth = { workspace = true, optional = true }
alloy-rlp.workspace = true

# misc
arbitrary = { workspace = true, optional = true, features = ["derive"] }
modular-bitfield = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }

[dev-dependencies]
derive_more.workspace = true
arbitrary.workspace = true
bincode = { workspace = true, features = ["serde"] }
proptest.workspace = true
proptest-arbitrary-interop.workspace = true
rand_08.workspace = true
rand.workspace = true
reth-codecs = { workspace = true, features = ["test-utils"] }
reth-zstd-compressors.workspace = true
secp256k1 = { workspace = true, features = ["rand"] }
alloy-consensus = { workspace = true, features = ["serde", "arbitrary"] }
serde_json.workspace = true

[features]
default = [ "std" ]
test-utils = [ "reth-codecs?/test-utils", "reth-primitives-traits/test-utils" ]
std = [
	"alloy-consensus/std",
	"alloy-eips/std",
	"alloy-primitives/std",
	"alloy-rlp/std",
	"alloy-rpc-types-eth?/std",
	"alloy-serde?/std",
	"derive_more/std",
	"reth-primitives-traits/std",
	"reth-zstd-compressors?/std",
	"secp256k1/std",
	"serde?/std",
	"serde_json/std",
	"serde_with?/std",
]
reth-codec = [
	"dep:modular-bitfield",
	"dep:reth-codecs",
	"dep:reth-zstd-compressors",
	"std",
]
arbitrary = [
	"alloy-consensus/arbitrary",
	"alloy-consensus/k256",
	"alloy-eips/arbitrary",
	"alloy-primitives/arbitrary",
	"alloy-rpc-types-eth?/arbitrary",
	"alloy-serde?/arbitrary",
	"dep:arbitrary",
	"reth-codecs?/arbitrary",
	"reth-primitives-traits/arbitrary",
	"std",
]
serde-bincode-compat = [
	"alloy-consensus/serde-bincode-compat",
	"alloy-eips/serde-bincode-compat",
	"alloy-rpc-types-eth?/serde-bincode-compat",
	"dep:serde_with",
	"reth-primitives-traits/serde-bincode-compat",
]
serde = [
	"alloy-consensus/serde",
	"alloy-eips/serde",
	"alloy-primitives/serde",
	"alloy-rpc-types-eth?/serde",
	"dep:alloy-serde",
	"dep:serde",
	"rand/serde",
	"rand_08/serde",
	"reth-codecs?/serde",
	"reth-primitives-traits/serde",
	"secp256k1/serde",
]
rpc = [ "dep:alloy-rpc-types-eth" ]
