[package]
name = "base-execution-forks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Base hardforks used in base-reth"

[lints]
workspace = true

[dependencies]
# reth
reth-ethereum-forks.workspace = true

[features]
default = [ "std" ]
std = [ "reth-ethereum-forks/std" ]
serde = [ "reth-ethereum-forks/serde" ]
